# toolkit

./: .gitignore  1.xyz  1T_adH_up.cif  1T_adH_up.xyz  1T_layer.cif  1T_layer.vasp  2.xyz  POSCAR  README.md  analysis.py  angle.py  angle_heat.py  angle_heat_near.py  core.py  cp2raw.py  density.py  joint.py  pyproject.toml  readnpy.py  tovasp.py
legacy/: adpredict.py  angle_heat.py  angle_heat_near.py  angle_poss.py  c2d.py  contour.py  contour_data.py  core.py  density.py  joint.py  move.py  tovasp.py  weight.py
src/toolkit/: __init__.py  io.py  structure.py
src/toolkit/analysis/: __init__.py  adsorption.py  angle.py  density.py
src/toolkit/cli/: analyze.py  convert.py  main.py  manipulate.py  menu.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_io.py  test_structure.py
tests/data/: triclinic.data  water.data  water.vasp  water.xyz  water_direct.vasp
